// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`when the project is empty > shows "Select framework" instead of "Start setup" on the Welcome screen > welcome-no-framework 1`] = `
" Confidence by Spotify                                              https://confidence.spotify.com/


                                        Confidence Quickstart

                      Feature flags and experiments, set up with AI in minutes.
                       This wizard will help you get started with Confidence.

                                     1. Check your system
                                     2. Sign in to Confidence
                                     3. Set up your AI agent
                                     4. Connect Confidence tools
                                     5. Choose features
                                     6. Set up your project


                                Directory  ✔ <project-dir>
                                Framework  ✘ Could not auto-detect
                                Telemetry  ✘ off


 ──────────────────────────────────────────────────────────────────────────────────────────────────
 Select your framework to continue

 ❯ Select framework
   About Confidence
   Quit

 ↑↓ navigate   enter confirm                                                                 vX.Y.Z"
`;

exports[`when the project is empty > shows "Start setup" after selecting a framework > welcome-after-framework-selected 1`] = `
" Confidence by Spotify                                              https://confidence.spotify.com/


                                        Confidence Quickstart

                      Feature flags and experiments, set up with AI in minutes.
                       This wizard will help you get started with Confidence.

                                     1. Check your system
                                     2. Sign in to Confidence
                                     3. Set up your AI agent
                                     4. Connect Confidence tools
                                     5. Choose features
                                     6. Set up your project


                                Directory  ✔ <project-dir>
                                Framework  ✔ React (selected)
                                Telemetry  ✘ off


 ──────────────────────────────────────────────────────────────────────────────────────────────────
 Ready to get started?

 ❯ Start setup
   Change framework
   About Confidence
   Quit

 ↑↓ navigate   enter confirm                                                                 vX.Y.Z"
`;
